--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   , "babel": "5.0.12"
   , "tape-catch": "1.0.4"
 
+  , "babel-loader": "5.0.0"
   , "del": "1.1.1"
   , "gulp": "3.8.11"
   , "gulp-help": "1.3.4"
-  , "gulp-babel": "5.1.0"
+  , "webpack": "1.8.2"
   }
 
 , "main": "/dist.es5/drawing-board.html"
