--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   , "del": "1.1.1"
   , "gulp": "3.8.11"
   , "gulp-help": "1.3.4"
+  , "gulp-mustache": "1.0.2"
+  , "gulp-rename": "1.2.2"
   , "webpack": "1.8.2"
   }
 
