--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   }
 
 , "scripts":
-  { "test": "babel-node test/*.js | tap-spec"
+  { "develop": "nodangel  --watch source  --watch test  --exec npm test"
   , "prepublish": "gulp build"
+  , "test": "babel-node test/*.js | tap-spec"
   }
 
 , "devDependencies":
   { "tap-spec": "3.0.0"
+  , "nodangel": "1.3.8"
 
   , "babel": "5.0.12"
   , "tape-catch": "1.0.4"
