--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   , "gulp-help": "1.3.4"
   , "gulp-mustache": "1.0.2"
   , "gulp-rename": "1.2.2"
+  , "jsdom": "3.1.2"
   , "webpack": "1.8.2"
   }
 
