--- a/package.json
+++ b/package.json
@@ -52,6 +52,6 @@
 , "author": "Tomek Wiszniewski <t.wiszniewski@gmail.com>"
 , "repository":
   { "type": "git"
-  , "url": "git@github.com:tomekwi/drawing-board.html.git"
+  , "url": "git@github.com:tomekwi/drawing-board.git"
   }
 }
