--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   { "develop": "nodangel  --watch source  --watch test  --exec npm test"
   , "prepublish": "gulp build"
   , "test": "babel-node test.js | tap-spec"
+  , "start": "echo 'Head over to http://localhost:9637/test/fixtures/basic.html and see miracles.\n' && livereloadx --static --port 9637 --exclude 'source/*'"
   }
 
 , "devDependencies":
   { "tap-spec": "3.0.0"
   , "nodangel": "1.3.8"
+  , "livereloadx": "0.3.7"
 
   , "babel": "5.0.12"
   , "tape-catch": "1.0.4"
