--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   , "del": "1.1.1"
   , "gulp": "3.8.11"
   , "gulp-help": "1.3.4"
+  , "gulp-rename": "1.2.2"
+  , "gulp-uglify": "1.2.0"
   , "webpack": "1.8.2"
 
   , "jsdom": "3.1.2"
