--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
-language: node_js
+branches:
+  only:
+    - master
+
+before_install:
+  git config user.name "Travis CI"
+
+language:
+  node_js
 node_js:
-- '0.10'
+  - stable
+  - iojs
+
+after_script:
+  npm run coveralls
