--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 , "description": "A navigatable SVG canvas. Made for web-based CAD apps."
 
 , "dependencies":
-  { "array-from": "1.0.0"
+  { "array-find": "stefanduberg/array-find#88d83a9"
+  , "array-from": "1.0.0"
   , "as": "0.4.1"
   , "object-assign": "2.0.0"
   , "stereo": "0.4.0"
